// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  <div
    aria-describedby={null}
    aria-labelledby={null}
    className="Notification__NotificationContainer-sc-1wz6254-1 cWsdIK"
    id={null}
    onClick={null}
    opacity={true}
    scale={true}
    style={null}
  >
    <span
      className="Notification__ContentWrapper-sc-1wz6254-0 cNubMo"
    >
      <div
        className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
        href={null}
        id={null}
        media={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-sc-1c4axau-1 hfFaih"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-0 cSnMzs"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 iUqfxL"
              id={null}
              rows={null}
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 ffuBqO"
                fontSize="1.05em"
                fontWeight={400}
                letterSpacing="0px"
              >
                This is a Standard notification.
              </h6>
            </section>
          </div>
          <div
            className="Bar__Slot-sc-1c4axau-0 hQRtOo"
          >
            <a
              className="Icon__LinkedIcon-sc-1oa9m1v-0 kzNrBw"
              disabled={null}
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 egNihH Banner__Close-sc-6825al-1 cgOoTm"
                color="link"
                data-icon="times"
                data-prefix="far"
                focusable="false"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </span>
  </div>,
  <button
    className="Button__StyledButton-sc-1v7sls2-0 hlnPdT"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={[Function]}
    tabIndex="1"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
      fontSize="1em"
      fontWeight={600}
      letterSpacing="0px"
    >
      Show Notification
    </p>
  </button>,
]
`;

exports[` 2`] = `
Array [
  <div
    aria-describedby={null}
    aria-labelledby={null}
    className="Notification__NotificationContainer-sc-1wz6254-1 gupnfs"
    id={null}
    onClick={null}
    opacity={true}
    scale={true}
    style={null}
  >
    <span
      className="Notification__ContentWrapper-sc-1wz6254-0 cNubMo"
    >
      <div
        className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
        href={null}
        id={null}
        media={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-sc-1c4axau-1 hfFaih"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-0 cSnMzs"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 iUqfxL"
              id={null}
              rows={null}
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 ffuBqO"
                fontSize="1.05em"
                fontWeight={400}
                letterSpacing="0px"
              >
                This is a Standard notification.
              </h6>
            </section>
          </div>
          <div
            className="Bar__Slot-sc-1c4axau-0 hQRtOo"
          >
            <a
              className="Icon__LinkedIcon-sc-1oa9m1v-0 kzNrBw"
              disabled={null}
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 egNihH Banner__Close-sc-6825al-1 cgOoTm"
                color="link"
                data-icon="times"
                data-prefix="far"
                focusable="false"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </span>
  </div>,
  <div
    className="Panel__PanelWrapper-sc-48epke-0 kObpyG"
    id={null}
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jZYywS Panel__PanelSection-sc-48epke-2 cYHdrc"
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 hlnPdT"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={[Function]}
        tabIndex="1"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Show Notification
        </p>
      </button>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jZYywS"
    />
  </div>,
]
`;

exports[` 3`] = `
Array [
  <div
    aria-describedby={null}
    aria-labelledby={null}
    className="Notification__NotificationContainer-sc-1wz6254-1 cWsdIK"
    id={null}
    onClick={null}
    opacity={true}
    scale={true}
    style={null}
  >
    <span
      className="Notification__ContentWrapper-sc-1wz6254-0 cNubMo"
    >
      <div
        className="Card__CardWrapper-sc-1g3s676-5 gaLndW Banner__StyledBanner-sc-6825al-0 bfAGjz"
        href={null}
        id={null}
        media={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-sc-1c4axau-1 hfFaih"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-0 cSnMzs"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 iUqfxL"
              id={null}
              rows={null}
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 ffuBqO"
                fontSize="1.05em"
                fontWeight={400}
                letterSpacing="0px"
              >
                This is a Standard notification telling you stuff.
              </h6>
            </section>
          </div>
          <div
            className="Bar__Slot-sc-1c4axau-0 hQRtOo"
          >
            <a
              className="Icon__LinkedIcon-sc-1oa9m1v-0 kzNrBw"
              disabled={null}
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-times fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 egNihH Banner__Close-sc-6825al-1 cgOoTm"
                color="link"
                data-icon="times"
                data-prefix="far"
                focusable="false"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </span>
  </div>,
  <div
    className="Panel__PanelWrapper-sc-48epke-0 kObpyG"
    id={null}
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jZYywS Panel__PanelSection-sc-48epke-2 cYHdrc"
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 hlnPdT"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={[Function]}
        tabIndex="1"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Status Notification
        </p>
      </button>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jZYywS"
    />
  </div>,
]
`;
